objects/RenMaint_Discount__c.object
<CustomObject>
    <description>Type</description>
    <fields>
        <fullName>Disc_Amt_Perc__c</fullName>
        <label>Disc Amt Perc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Format__c</fullName>
        <description>used in renewal maintenance report</description>
        <formula>if (Discount_Amount__c&gt;0,&apos;-&apos; &amp; Quote_Name__r.Quote_Currency__r.Symbol__c &amp; &apos; &apos; &amp; IF(abs(Discount_Amount__c) &gt;= 1000000, 
TEXT(FLOOR(round(abs(Discount_Amount__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
abs(Discount_Amount__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(abs(Discount_Amount__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(abs(Discount_Amount__c),0))), 3) , Quote_Name__r.Quote_Currency__r.Symbol__c &amp; &apos; &apos; &amp; IF(abs(Discount_Amount__c) &gt;= 1000000, 
TEXT(FLOOR(round(abs(Discount_Amount__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
abs(Discount_Amount__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(abs(Discount_Amount__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(abs(Discount_Amount__c),0))), 3))</formula>
        <label>Discount Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Number__c</fullName>
        <formula>-1 *  Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage_Format__c</fullName>
        <formula>if( Discount_Amount__c&gt;0, &apos;-&apos; &amp; TEXT(round(abs(Discount_Percentage__c)*100,2)) &amp; &apos;%&apos;, TEXT(round(abs(Discount_Percentage__c)*100,2)) &amp; &apos;%&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <description>stores old currency code.</description>
        <label>Quote Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_List_Amount__c</fullName>
        <label>Quote List Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <description>Name of the related Quote</description>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Quote_Header_Discount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>Store the details of the row_id</description>
        <externalId>true</externalId>
        <label>ROW ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO Identify that record is migrated or not</description>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>Header Discount</label>
    <nameField>
        <label>Discount Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Header Discount</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>